Add configurable S3 max concurrent requests setting
- Add S3_MAX_CONCURRENT_REQUESTS to config template with documentation
  Default: 10 (AWS CLI default)
  Recommended range: 5-20

- Update datasync-simulator.sh to export AWS_MAX_CONCURRENT_REQUESTS
  environment variable before running aws s3 sync

- Add configure_s3_transfer() function to setup-client.sh wizard
  Prompts user for concurrent requests setting
  Validates input is numeric
  Warns if value > 20 (may cause throttling)

- Add sed replacement in generate_config() for the placeholder

This allows users to tune S3 upload performance based on their use case:
- Many small files: 15-20 for better parallelism
- Limited bandwidth: 5 for conservative uploads
- Default workload: 10 (good balance)

--- a/config/config-template.env
+++ b/config/config-template.env
@@ -26,6 +26,16 @@ export S3_BUCKET_ARN="arn:aws:s3:::[BUCKET_NAME]"
 export S3_SUBDIRECTORY="[S3_SUBDIRECTORY]"
 export S3_STORAGE_CLASS="INTELLIGENT_TIERING"
 
+# S3 Transfer Configuration
+# Maximum number of concurrent requests for S3 uploads
+# AWS CLI default: 10
+# Recommended values:
+#   10  - Default, good balance for most use cases
+#   15  - Better for many small files
+#   20  - Maximum recommended (higher may cause throttling)
+#   5   - Conservative, for limited bandwidth
+export S3_MAX_CONCURRENT_REQUESTS="[S3_MAX_CONCURRENT_REQUESTS]"
+
 # ==============================================================================
 # IAM CONFIGURATION
 # ==============================================================================
